# fast_zero_sync

./: .dockerignore  Dockerfile  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: .#security.py  app.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 85ffc661355f_create_todos_table.py  a08619a0124c_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
